deploy/k8s/base/ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  labels:
    app: nginx-ingress
spec:
  controller: k8s.io/ingress-nginx
