deploy/k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-service
  namespace: go-app
  labels:
    app: identity-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-service
  template:
    metadata:
      labels:
        app: identity-service
    spec:
      containers:
        - name: identity-service
          image: xomrkob/identity-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            - containerPort: 50051
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /auth/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /auth/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
