deploy/k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: identity-service-service
  namespace: go-app
spec:
  selector:
    app: identity-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: grpc
      port: 50051
      targetPort: 50051
  type: ClusterIP
